--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -123,6 +123,7 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
+set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -243,7 +244,6 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.134.61;
-set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.65.144.142;
 set_real_ip_from 176.65.144.94;
 set_real_ip_from 176.97.114.202;
@@ -580,6 +580,7 @@ set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.239.191.25;
+set_real_ip_from 188.245.219.108;
 set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
@@ -650,7 +651,6 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.107.109.16;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -697,7 +697,6 @@ set_real_ip_from 195.47.238.176;
 set_real_ip_from 195.47.238.177;
 set_real_ip_from 195.47.238.178;
 set_real_ip_from 195.47.238.82;
-set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
@@ -992,7 +991,6 @@ set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
-set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -1078,7 +1076,6 @@ set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
-set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1284,6 +1281,7 @@ set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
+set_real_ip_from 2a01:4f8:1c1c:b052::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:4f9:c010:dc45::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
@@ -1293,8 +1291,8 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
-set_real_ip_from 2a01:f500:f500:e::2;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1403,7 +1401,6 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:6301:0:71:a067:d2f9:48b9:db3f;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
 set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1593,7 +1590,6 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
@@ -1619,6 +1615,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1750,7 +1747,6 @@ set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.160.3.1;
-set_real_ip_from 45.11.183.87;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1770,7 +1766,7 @@ set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
-set_real_ip_from 45.138.87.142;
+set_real_ip_from 45.138.87.139;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1840,6 +1836,7 @@ set_real_ip_from 45.95.169.16;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1878,6 +1875,7 @@ set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.218;
+set_real_ip_from 5.255.118.48;
 set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.121;
 set_real_ip_from 5.255.123.158;
