--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -3,6 +3,7 @@ allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.102;
 allow 102.211.56.105;
+allow 102.211.56.13;
 allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -697,11 +698,11 @@ allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.82;
+allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.88;
-allow 195.47.238.89;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
@@ -710,7 +711,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.228;
+allow 198.167.206.252;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -971,6 +972,7 @@ allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1588,8 +1590,8 @@ allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
@@ -1601,6 +1603,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1754,6 +1757,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1766,7 +1770,7 @@ allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.76;
-allow 45.138.87.139;
+allow 45.138.87.142;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
