--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -654,6 +654,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -667,7 +668,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -682,7 +682,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -731,7 +730,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
